comp-transform/testsuite/good/TyVarInDecl/TyVarInDecl.hs
{-# LANGUAGE ComposableTypes #-}

module ContextInExt where

piececategory A

data piece A ==> B = C

d -: A -> e

